Fixed pipeline so it runs locally. Tweaks according to intellij analyze code